--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.22.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.26.0",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^13.0.0",
@@ -33,9 +34,12 @@
     "postcss": "^5.0.21",
     "postcss-loader": "^1.3.3",
     "react": "^15.0.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^3.0.2",
+    "reactstrap": "^4.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
